--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img src="Images/odin-illustration-image.webp" alt="Odin" width="600" height="500">
     <br>
     <ul>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="/Odin-Recipes/recipes/lasagna.html">Lasagna</a></li>
         <li><a href="/Odin-Recipes/recipes/Rhubarb.html">Strawberry Rhubarb Drop Biscuits</a></li>
     </ul>
     </body>
