--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <img src="Images/odin-illustration-image.webp" alt="Odin" width="600" height="500">
     <br>
     <ul>
-        <li><a href="/Odin-Recipes/recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="/Odin-Recipes/recipes/Rhubarb.html">Strawberry Rhubarb Drop Biscuits</a></li>
+        <li><a href="/Images/lasagna_image.webp">Lasagna</a></li>
+        <li><a href="/Images/Rhubarb_image.webp">Strawberry Rhubarb Drop Biscuits</a></li>
     </ul>
     </body>
 </html>
