--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="/Odin-Recipes/Images/lasagna_image.webp" alt="lasagna"
+    <img src="/Images/lasagna_image.webp" alt="lasagna"
     width="300" height="400">
     <h2>Description</h2>
 
