Added ../ to recipes

--- a/recipes/Rhubarb.html
+++ b/recipes/Rhubarb.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1><em>Strawberry Rhubarb Drop Biscuits</em></h1>
-    <img src="/Images/Rhubarb_image.webp" alt="Strawberry Rhubarb"
+    <img src="../Images/Rhubarb_image.webp" alt="Strawberry Rhubarb"
     width="300" height="400">
 
     <h2>Description</h2>
